# libssvd

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: libssvd.h  ssvd.h
make/: Makefile
msvc/: libssvd.vcxproj
scripts/: contour.py  data.txt  pyssvd.py  run.py
src/: common.h  dmd.cpp  dmd.h  libssvd.cc  linalg.h  sdmd.cc  sdmd.h  ssvd.cc  ssvd.cpp  ssvd.h  svd.cpp  svd.h
